# safe-LiDAR-obstacle-detection

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: known_obs_coord_test_stage1.csv  known_obs_coord_test_stage2_4dv.csv  known_obs_coord_train.csv  known_obs_coord_train_w_complete_maize_bean.csv
launch/: clustering_node_launch.py  lidar_filtering_node_launch.py  polygon_marker_launch.py
scripts/: polygon_marker_node.py
src/: clustering_node.cpp  lidar_filtering_node.cpp
